--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
+    "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
     "express": "^4.14.0",
