adds mongoose for database conection

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "lodash": "^4.17.2",
+    "mongoose": "^4.7.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
